# grdl

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  conflicts.md  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  requirements_optional.txt
.benchmarks/: index.json
.benchmarks/records/: 152f8f08-ed1f-4ed1-b9ba-c98d187851c3.json  2d138458-343f-44e5-b8b7-8b024ab3c317.json  39138c95-4b5a-4882-83eb-a5ae4c5b70ba.json  4228dc30-0c95-498c-8da3-4fb93b03c7f0.json  4f1e2f90-2578-4046-9e28-89b13b355381.json  886aba9e-27b5-4865-8f8a-f12ca8b8eda1.json  b3badcb8-aea0-4a1e-9f43-672d0fd47b66.json  bdc97bef-9257-4486-875f-d205b3fa940b.json  da793447-0d5f-4eb2-859f-31962c28a191.json  e6ccafd6-1450-46b9-b915-616cbfc28f72.json
.github/workflows/: publish.yml
SAR/: phd_return.py
SAR/plotting/: plot_sar_image.py
SAR/processing/: README.md  phd_return.py  sub_aperture.py
docs/: logging_tutorial.md  sar_metadata_mapping.md  sarpy2_io_benchmarks.md
example/catalog/: discover_and_download.py  view_product.py
grdl/: __init__.py  _torch_optional.py  exceptions.py  vocabulary.py
grdl/IO/: ARCHITECTURE.md  MIGRATION.md  PATTERNS.md  README.md  TODO.md  __init__.py  _dll_discovery.py  base.py  biomass.py  catalog.py  generic.py  geotiff.py  hdf5.py  integration.md  jpeg2000.py  models.py  nitf.py  numpy_io.py  performance.py  png.py  probe.py  sar.py
grdl/IO/catalog/: __init__.py  aster_catalog.py  biomass_catalog.py  nisar_catalog.py  remote_utils.py  sentinel1_catalog.py  sentinel2_catalog.py  terrasar_catalog.py  viirs_catalog.py
grdl/IO/eo/: __init__.py  _backend.py  _tre_airborne.py  _tre_band.py  _tre_rsm_error.py  _tre_xml.py  nitf.py  nitf_writer.py  sentinel2.py
grdl/IO/gmti/: __init__.py  _segments.py  cphd_steering.py  helpers.py  stanag4607.py  stanag4607_writer.py
grdl/IO/ir/: __init__.py  (+2 more)
grdl/contrast/: ARCHITECTURE.md  README.md  __init__.py  auto.py  base.py  decibel.py  density.py  gamma.py  histogram.py  linear.py  logarithmic.py  nrl.py  percentile.py  sigmoid.py
grdl/coregistration/: README.md  __init__.py  affine.py  base.py  feature_match.py  projective.py  utils.py
grdl/data_prep/: README.md  __init__.py  base.py  chip_extractor.py  normalizer.py  streaming_stats.py  tiler.py
grdl/discovery/: README.md  __init__.py  base.py  catalog.py  scanner.py  synthesizer.py
grdl/geolocation/: ARCHITECTURE.md  PATTERNS.md  README.md  __init__.py  _numba_projection.py  _numba_warmup.py  base.py  chip.py  coordinates.py  projection.py  utils.py
grdl/image_processing/: ARCHITECTURE.md  README.md  __init__.py  architecture.md  base.py  intensity.py  params.py  pipeline.py  versioning.py
grdl/imagej/: __init__.py  _taxonomy.py  auto_local_threshold.py  clahe.py  edge_detection.py  fft_bandpass.py  find_maxima.py  gamma.py  morphology.py  rank_filters.py  rolling_ball.py  statistical_region_merging.py  unsharp_mask.py  z_projection.py
grdl/interpolation/: README.md  __init__.py  base.py  farrow.py  lagrange.py  lanczos.py  polyphase.py  thiran.py  windowed_sinc.py
grdl/shapes/: README.md  __init__.py  arc.py  backend.py  base.py  circle.py  combine.py  cueing.py  display.py  ellipse.py  polygon.py  rasterize.py  refine.py
grdl/transforms/: README.md  __init__.py  detection.py
grdl/vector/: README.md  __init__.py  base.py  conversion.py  coords.py  io.py  models.py  spatial.py
ground_truth/: biomass_calibration_targets.geojson
image_processing/: std_filter.py
image_segmentation/: binary_segs.py
interpolation/: polyphaseinterpolation.py
tests/: __init__.py  _bench_yamaguchi.py  conftest.py  grdl_polsar_vs_polsartools.py  test_benchmarks.py  test_contrast_auto.py  test_contrast_density.py  test_contrast_gamma.py  test_contrast_histogram.py  test_contrast_linear.py  test_contrast_logarithmic.py  test_contrast_nrl.py  test_contrast_reexports.py  test_contrast_sigmoid.py  test_coregistration.py  test_coregistration_feature_match.py  test_cphd_to_sicd.py  test_data_prep_chip_extractor.py  test_data_prep_normalizer.py  test_data_prep_streaming_stats.py  test_data_prep_tiler.py  test_eo_band_airborne_tres.py  test_eo_nitf_tres.py  test_eo_rsm_error_tres.py  test_execute_protocol.py  test_geolocation_affine.py  test_geolocation_biomass.py  test_geolocation_block_local_hae.py  test_geolocation_chip.py  test_geolocation_coordinates.py  test_geolocation_corner.py  test_geolocation_dem_integration.py  test_geolocation_dted_nested.py  test_geolocation_elevation.py  test_geolocation_projection.py  test_geolocation_rpc.py  test_geolocation_rsm.py  test_geolocation_sentinel1_slc.py  test_geolocation_sicd.py  test_geolocation_sidd.py  (+94 more)
tools/NN_Search/: NN_Search.py
tools/Time_JACKER/: time_jacker.py
tools/glint_detect/: dueed.py
tools/ifp/: ifp_runtime.py  run_file.json
(+251 files in other folders)
