[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grdl"
version = "0.1.0"
description = "GEOINT Rapid Development Library — modular building blocks for geospatial intelligence image processing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Duane Smalley", email = "duane.d.smalley@gmail.com"},
    {name = "Steven Siebert"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
sar = [
    "sarpy>=1.3.0",
]
eo = [
    "rasterio>=1.2.0",
]
biomass = [
    "rasterio>=1.2.0",
    "requests>=2.25.0",
]
coregistration = [
    "opencv-python-headless>=4.5.0",
]
all = [
    "sarpy>=1.3.0",
    "rasterio>=1.2.0",
    "opencv-python-headless>=4.5.0",
    "requests>=2.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
    "ruff>=0.4.0",
]

[project.urls]
Repository = "https://github.com/geoint-org/GRDL"

[tool.setuptools.packages.find]
include = ["grdl*"]

[tool.pytest.ini_options]
addopts = "-p no:faulthandler"
testpaths = ["tests"]
markers = [
    "benchmark: marks tests as benchmark tests (deselect with '-m \"not benchmark\"')",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
